--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -23,49 +23,52 @@
                                     <action selector="playPauseButtonTap:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="b3o-Kh-V6v"/>
                                 </connections>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="oyI-Fy-b8p">
-                                <rect key="frame" x="50" y="427" width="220" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </slider>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kdic-icon.png" id="gby-y7-pvw">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork.png" id="gby-y7-pvw">
                                 <rect key="frame" x="60" y="107" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V5q-vm-xr2">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No stream available!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V5q-vm-xr2">
                                 <rect key="frame" x="40" y="315" width="240" height="21"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zAU-pw-1E2">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please check back later." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zAU-pw-1E2">
                                 <rect key="frame" x="40" y="344" width="240" height="21"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_min.png" id="SIm-ek-lkT">
-                                <rect key="frame" x="30" y="431" width="25" height="25"/>
+                                <rect key="frame" x="30" y="427" width="25" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_max.png" id="yiP-zU-kJJ">
-                                <rect key="frame" x="276" y="431" width="25" height="25"/>
+                                <rect key="frame" x="276" y="427" width="25" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kdic-head-wide1.png" id="1kT-w0-Xmg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kdic-wide.png" id="1kT-w0-Xmg">
                                 <rect key="frame" x="0.0" y="20" width="320" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <view contentMode="scaleToFill" id="sMa-Qd-EKg">
+                                <rect key="frame" x="52" y="431" width="216" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="BsL-eg-1kj"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="albumArtView" destination="gby-y7-pvw" id="4ZT-qb-Qle"/>
+                        <outlet property="artistLabel" destination="zAU-pw-1E2" id="NIP-jp-pRx"/>
                         <outlet property="playpause" destination="RHB-13-4TN" id="cpU-k2-Qhm"/>
-                        <outlet property="slider" destination="oyI-Fy-b8p" id="7T0-v2-xp5"/>
+                        <outlet property="songLabel" destination="V5q-vm-xr2" id="XKv-52-iQK"/>
                         <outlet property="view" destination="Y3h-EY-oEk" id="9Ap-Hr-upo"/>
+                        <outlet property="volViewParent" destination="sMa-Qd-EKg" id="1U2-0E-x3O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -74,8 +77,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="kdic-head-wide1.png" width="960" height="198"/>
-        <image name="kdic-icon.png" width="157" height="155"/>
+        <image name="iTunesArtwork.png" width="512" height="512"/>
+        <image name="kdic-wide.png" width="960" height="198"/>
         <image name="play.png" width="256" height="256"/>
         <image name="volume_max.png" width="512" height="512"/>
         <image name="volume_min.png" width="512" height="512"/>
